Updated license footer and lab 00

--- a/footer.html
+++ b/footer.html
@@ -1,4 +1,11 @@
 <p>
+Adapted from <a href="https://apreshill.github.io/data-vis-labs-2018/index.html">
+2018 course materials</a>
+ by 
+<a href="https://alison.rbind.io/">Dr. Alison Hill</a>
+</p>
+
+<p>
 <a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/">
 <img alt="Creative Commons License" style="border-width:0" src="by-nc.png" height="400" width="65"/></a>
 </p>
