--- a/about.html
+++ b/about.html
@@ -22,7 +22,8 @@
 <script src="site_libs/navigation-1.1/tabsets.js"></script>
 <link href="site_libs/highlightjs-9.12.0/default.css" rel="stylesheet" />
 <script src="site_libs/highlightjs-9.12.0/highlight.js"></script>
-<link href="site_libs/font-awesome-4.5.0/css/font-awesome.min.css" rel="stylesheet" />
+<link href="site_libs/font-awesome-5.1.0/css/all.css" rel="stylesheet" />
+<link href="site_libs/font-awesome-5.1.0/css/v4-shims.css" rel="stylesheet" />
 
 <style type="text/css">code{white-space: pre;}</style>
 <style type="text/css">
@@ -91,8 +92,14 @@ img {
 .tabbed-pane {
   padding-top: 12px;
 }
+.html-widget {
+  margin-bottom: 20px;
+}
 button.code-folding-btn:focus {
   outline: none;
+}
+summary {
+  display: list-item;
 }
 </style>
 
@@ -108,7 +115,6 @@ body {
   padding-top: 65px;
   margin-top: -65px;
 }
-
 .section h2 {
   padding-top: 65px;
   margin-top: -65px;
@@ -128,6 +134,43 @@ body {
 .section h6 {
   padding-top: 65px;
   margin-top: -65px;
+}
+.dropdown-submenu {
+  position: relative;
+}
+.dropdown-submenu>.dropdown-menu {
+  top: 0;
+  left: 100%;
+  margin-top: -6px;
+  margin-left: -1px;
+  border-radius: 0 6px 6px 6px;
+}
+.dropdown-submenu:hover>.dropdown-menu {
+  display: block;
+}
+.dropdown-submenu>a:after {
+  display: block;
+  content: " ";
+  float: right;
+  width: 0;
+  height: 0;
+  border-color: transparent;
+  border-style: solid;
+  border-width: 5px 0 5px 5px;
+  border-left-color: #cccccc;
+  margin-top: 5px;
+  margin-right: -10px;
+}
+.dropdown-submenu:hover>a:after {
+  border-left-color: #ffffff;
+}
+.dropdown-submenu.pull-left {
+  float: none;
+}
+.dropdown-submenu.pull-left>.dropdown-menu {
+  left: -100%;
+  margin-left: 10px;
+  border-radius: 6px 0 6px 6px;
 }
 </style>
 
@@ -149,18 +192,77 @@ $(document).ready(function () {
 });
 </script>
 
-
 <div class="container-fluid main-container">
 
 <!-- tabsets -->
+
+<style type="text/css">
+.tabset-dropdown > .nav-tabs {
+  display: inline-table;
+  max-height: 500px;
+  min-height: 44px;
+  overflow-y: auto;
+  background: white;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+}
+
+.tabset-dropdown > .nav-tabs > li.active:before {
+  content: "";
+  font-family: 'Glyphicons Halflings';
+  display: inline-block;
+  padding: 10px;
+  border-right: 1px solid #ddd;
+}
+
+.tabset-dropdown > .nav-tabs.nav-tabs-open > li.active:before {
+  content: "&#xe258;";
+  border: none;
+}
+
+.tabset-dropdown > .nav-tabs.nav-tabs-open:before {
+  content: "";
+  font-family: 'Glyphicons Halflings';
+  display: inline-block;
+  padding: 10px;
+  border-right: 1px solid #ddd;
+}
+
+.tabset-dropdown > .nav-tabs > li.active {
+  display: block;
+}
+
+.tabset-dropdown > .nav-tabs > li > a,
+.tabset-dropdown > .nav-tabs > li > a:focus,
+.tabset-dropdown > .nav-tabs > li > a:hover {
+  border: none;
+  display: inline-block;
+  border-radius: 4px;
+}
+
+.tabset-dropdown > .nav-tabs.nav-tabs-open > li {
+  display: block;
+  float: none;
+}
+
+.tabset-dropdown > .nav-tabs > li {
+  display: none;
+}
+</style>
+
 <script>
 $(document).ready(function () {
   window.buildTabsets("TOC");
 });
+
+$(document).ready(function () {
+  $('.tabset-dropdown > .nav-tabs > li').click(function () {
+    $(this).parent().toggleClass('nav-tabs-open')
+  });
+});
 </script>
 
 <!-- code folding -->
-
 
 
 
@@ -185,7 +287,7 @@ $(document).ready(function () {
   <a href="data-vis-resources.html">Resources</a>
 </li>
 <li>
-  <a href="https://sakai.ohsu.edu/portal/site/CS-631-1-32176-Sp18">Sakai</a>
+  <a href="https://sakai.ohsu.edu/portal/site/CS-631-1-31943-Sp19">Sakai</a>
 </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
@@ -206,18 +308,25 @@ $(document).ready(function () {
 </div>
 
 
-<p>This is an <a href="http://rmarkdown.rstudio.com/rmarkdown_websites.html">R Markdown website</a>. The source can be found <a href="https://github.com/apreshill/data-vis-labs-2018">on GitHub <i class="fa fa-github"></i></a>.</p>
+<p>This is an <a href="http://rmarkdown.rstudio.com/rmarkdown_websites.html">R Markdown website</a>. The source can be found <a href="https://github.com/watanabesmith/data-vis-labs-2019">on GitHub <i class="fa fa-github"></i></a>. These materials and this website is heavily derived from Dr Alison Hill’s 2018 page for this same course (<a href="https://github.com/apreshill/data-vis-labs-2018" class="uri">https://github.com/apreshill/data-vis-labs-2018</a>).</p>
 <p>The link to all the labs is here:</p>
-<p><a href="https://apreshill.github.io/data-vis-labs-2018/" class="uri">https://apreshill.github.io/data-vis-labs-2018/</a></p>
+<p><a href="https://watanabesmith.github.io/data-vis-labs-2019/" class="uri">https://watanabesmith.github.io/data-vis-labs-2019/</a></p>
 <p>Who am I?</p>
 <ul>
-<li>Alison Hill</li>
-<li><a href = "https://github.com/apreshill/"><i class="fa fa-github"> GitHub</i></a></li>
-<li><a href = "https://twitter.com/apreshill"><i class="fa fa-twitter"> Twitter</i></a></li>
-<li><a href = "https://alison.rbind.io"><i class="fa fa-home"> Personal Website</i></a></li>
+<li>Kevin Watanabe-Smith</li>
+<li><a href = "https://github.com/WatanabeSmith/"><i class="fa fa-github"> GitHub</i></a></li>
+<li><a href = "https://twitter.com/WatanabeSmith"><i class="fa fa-twitter"> Twitter</i></a></li>
+<li><a href = "https://watanabesmith.rbind.io/"><i class="fa fa-home"> Personal Website</i></a></li>
 </ul>
 <p>Materials initially created for <a href="http://cslu.ohsu.edu/~bedricks/courses/cs631/">CS631: Principles &amp; Practice of Data Visualization (Spring 2018)</a>.</p>
-<p>Course Directors: Drs. Steven Bedrick, Jackie Wirz, and Alison Hill.</p>
+<p>Course Directors: Drs. Steven Bedrick, Jackie Wirz, and Kevin Watanabe-Smith.</p>
+
+<p>
+Adapted from <a href="https://apreshill.github.io/data-vis-labs-2018/index.html">
+2018 course materials</a>
+ by 
+<a href="https://alison.rbind.io/">Dr. Alison Hill</a>
+</p>
 
 <p>
 <a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/">
