--- a/00-install_name_plot.html
+++ b/00-install_name_plot.html
@@ -658,6 +658,7 @@ ggplot(instructors, aes(x = year,
 <p>Save your work so you can share your favorite plot with us. You will not like the looks of your plot if you mouse over to <code>Export</code> and save it. Instead, use <code>ggplot2</code>’s command for saving a plot with sensible defaults:</p>
 <pre class="r"><code>help(ggsave)</code></pre>
 <pre class="r"><code>ggsave(&quot;kevin_watanabesmith.pdf&quot;, plot) # please make the filename unique!</code></pre>
+<p><strong>For Rstudio cloud</strong>: once you save your plot as a PDF you’ll still need to download the PDF to your computer. To do this, in the lower left panel click on the “Files” tab, check the box next to your saved PDF, click “More” drop-down menu and select “Export”.</p>
 <p>Upload this exported plot to Sakai before Wednesday at noon.</p>
 </div>
 </div>
