--- a/data-vis-resources.html
+++ b/data-vis-resources.html
@@ -308,7 +308,8 @@ $(document).ready(function () {
 
 <div id="data-visualiztion-by-kieran-healy" class="section level2">
 <h2>Data Visualiztion by Kieran Healy</h2>
-<p>Official book link (for purchase): <a href="https://kieranhealy.org/publications/dataviz/" class="uri">https://kieranhealy.org/publications/dataviz/</a> Official link for text of an earlier, incomplete draft: <a href="https://socviz.co/index.html#preface" class="uri">https://socviz.co/index.html#preface</a></p>
+<p>Official book link (for purchase): <a href="https://kieranhealy.org/publications/dataviz/" class="uri">https://kieranhealy.org/publications/dataviz/</a></p>
+<p>Official link for text of an earlier, incomplete draft: <a href="https://socviz.co/index.html#preface" class="uri">https://socviz.co/index.html#preface</a></p>
 </div>
 <div id="take-a-sad-plot-make-it-better" class="section level2">
 <h2>Take A Sad Plot &amp; Make It Better</h2>
